Change Request 1 Added alternative row colors Error message text changes Function to automatically add new line when a reason is selected at last item

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -27,6 +27,10 @@ msgSMatDocPosted=Material document posted
 msgEIncorrectSite=Incorrect Site
 msgEBlankArticle=Blank Article
 msgEIncorrectArticle=Incorrect Article
+msgEIncorrectArticleLineNo=Incorrect article at line no.
 msgEBlankQuantity=Blank Quantity
+msgEIncorrectQuantityLineNo=Incorrect quantity at line no.
 msgEBlankReason=Blank Reason
+msgESelectValidReason=Please select a valid reason at line no.
 msgEFixErrors=Please fix errors
+msgENoItems=No items to post
